# dnd-character

./: .gitignore  Cargo.toml  LICENSE  README.md
.store/: equipment.json  items.json  template.json
.store/characters/: bashid.json  vynne.json
src/: dimensions.rs  main.rs  store.rs  util.rs
src/character/: ability_score.rs  class.rs  description.rs  equipment.rs  feature.rs  hitpoints.rs  inventory.rs  mod.rs  name.rs  persistence.rs  proficiencies.rs  saving_throw.rs  skill.rs  spell_slot.rs  spellcasting.rs
src/core/: ability_score.rs  attack.rs  effect.rs  feature.rs  feature_path.rs  mod.rs  overlay.rs  roll.rs  slot.rs
src/core/roll/: check.rs  damage.rs  mod.rs  rollable.rs
src/equipment/: mod.rs  weapon.rs
src/resources/: mod.rs  persistence.rs  skill.rs  template.rs
src/resources/equipment/: mod.rs  weapon.rs
src/resources/item/: mod.rs  weapon.rs
