[package]
name = "dnd-character"
version = "0.1.0"
authors = ["dgoetsch <devynmichellegoetsch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced= { version = "0.2", features = ["glow"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
async-std="1.6.2"

[dev-dependencies]
actix-rt = "1.1.1"